# ultra-hft-project

./: CMakeLists.txt  Dockerfile  README.md  create_hft_system.sh
apps/live-engine/: engine.cpp  engine.hpp  main.cpp
config/: engine.toml
config/exchange-specs/: nasdaq_itch50.toml
config/profiles/: low_latency.toml
include/ultra/core/: compiler.hpp  types.hpp
include/ultra/core/lockfree/: spsc_queue.hpp
include/ultra/core/memory/: huge_page_allocator.hpp
include/ultra/core/time/: rdtsc_clock.hpp
include/ultra/execution/: gateway_sim.hpp
include/ultra/market-data/book/: order_book_l2.hpp
include/ultra/market-data/itch/: decoder.hpp
include/ultra/network/parsers/: ethernet_parser.hpp
include/ultra/risk/: pretrade_checker.hpp
include/ultra/strategy/: strategy.hpp
include/ultra/strategy/rl-inference/: rl_policy.hpp
src/core/time/: rdtsc_clock.cpp
src/execution/: gateway_sim.cpp
src/market-data/book/: order_book_l2.cpp
src/market-data/itch/: decoder.cpp
src/network/parsers/: ethernet_parser.cpp
src/risk/: pretrade_checker.cpp
src/strategy/rl-inference/: rl_policy_stub.cpp
